# vector_c

./: .gitignore  Android.mk  Dot.h  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  vector.c  vector.h  vectorDot  vector_test.c
include/vector/: vector.h
src/: vector.c
test/: test_vector.c
